# nrf_ble_scale

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
drivers/sensor/nau7802/: CMakeLists.txt  Kconfig  nau7802.c  nau7802.h  nau7802_nvs.c  nau7802_regmap.h  nau7802_trigger.c
src/: app_nau7802_cmd.h  main.c  myble_lbs.c  myble_lbs.h  shell_commands.c  shell_commands.h
src/ble/: ble_service.c  ble_service.h  myble_lbs.c  myble_lbs.h
src/calibration/: calibration.c  calibration.h
src/nvs/: nvs.c  nvs.h
src/power_off/: poweroff.c  poweroff.h
src/sensor/: appcall_nau7802.c  appcall_nau7802.h  calibration.c  calibration.h
src/shell/: shell_commands.c  shell_commands.h
